Bug 1054819 - Ensure that the dictionary is released on the main thread. r=ehsan, a=sledru